apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portfolio
  ports:
    - {name: http, port: 8080, targetPort: http}
