apps/portfolio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-lan
  namespace: portfolio
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`mmlinaric.com`)
      kind: Rule
      services:
        - {name: portfolio, port: 8080}
  tls:
    secretName: portfolio-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-public
  namespace: portfolio
spec:
  entryPoints: [tunnel]
  routes:
    - match: Host(`mmlinaric.com`)
      kind: Rule
      services:
        - {name: portfolio, port: 8080}
  tls:
    secretName: portfolio-tls
